# libkscreen

./: .Doxyfile.cmake  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  CONTRIBUTING.md  DESIGN  KF5ScreenConfig.cmake.in  KF6ScreenConfig.cmake.in  LibKScreenConfig.cmake.in  kscreen.categories  libkscreen-version.h.in
autotests/: CMakeLists.txt  testbackendloader.cpp  testconfigmonitor.cpp  testconfigserializer.cpp  testedid.cpp  testinprocess.cpp  testkwaylandbackend.cpp  testkwaylandconfig.cpp  testkwaylanddpms.cpp  testlog.cpp  testmodelistchange.cpp  testqscreenbackend.cpp  testscreenconfig.cpp  testwaylandbackend.cpp  testwloutputs.cpp  testwlsetup.cpp  testwlwrite.cpp  testxrandr.cpp
autotests/configs/: default.json
backends/: CMakeLists.txt  abstractbackend.h  utils.cpp  utils.h  xcbeventlistener.cpp  xcbeventlistener.h  xcbwrapper.cpp  xcbwrapper.h
backends/fake/: CMakeLists.txt  fake.cpp  fake.h  parser.cpp  parser.h
backends/kwayland/: CMakeLists.txt  README.md  TODO.txt  waylandbackend.cpp  waylandbackend.h  waylandconfig.cpp  waylandconfig.h  waylandconfigreader.cpp  waylandconfigwriter.h  waylandoutput.cpp  waylandoutput.h  waylandoutputdevice.cpp  waylandoutputdevice.h  waylandoutputdevicemode.cpp  waylandoutputdevicemode.h  waylandoutputmanagement.cpp  waylandoutputmanagement.h  waylandscreen.cpp  waylandscreen.h
backends/qscreen/: .directory  CMakeLists.txt  qscreen.cpp  qscreen.h  qscreenbackend.cpp  qscreenbackend.h  qscreenconfig.cpp  qscreenconfig.h  qscreenoutput.cpp  qscreenoutput.h  qscreenscreen.cpp  qscreenscreen.h
backends/wayland/: CMakeLists.txt  README.txt  TODO.txt  waylandbackend.cpp  waylandbackend.h  waylandconfig.cpp  waylandconfig.h  waylandconfigreader.cpp  waylandconfigreader.h  waylandconfigwriter.cpp  waylandconfigwriter.h  waylandoutput.cpp  waylandoutput.h  waylandscreen.cpp  waylandscreen.h
backends/xrandr/: CMakeLists.txt  kwineffect.cpp  kwineffect.h  xlibandxrandr.h  xrandr.cpp  xrandr.h  xrandrconfig.cpp  xrandrconfig.h  xrandrcrtc.cpp  xrandrcrtc.h  xrandrmode.cpp  xrandrmode.h  xrandroutput.cpp  xrandroutput.h  xrandrscreen.cpp  xrandrscreen.h  xrandrx11helper.cpp  xrandrx11helper.h  xrandrxcbhelper.cpp  xrandrxcbhelper.h
backends/xrandr/qrandr/: crtc.cpp  crtc.h  mode.cpp  output.cpp  output.h  qrandr.cpp  screen.cpp  screen.h  xlibandxrandr.h  xrandr.cpp  xrandr.h
backends/xrandr/qrandr/testapp/: CMakeLists.txt  testapp.cpp
backends/xrandr1.1/: CMakeLists.txt  wrapper.h  xlibandxcb.h  xrandr11.cpp  xrandr11.h
cmake/modules/: FindX11_XCB.cmake  FindXCB.cmake
interfaces/: org.kde.KScreen.Backend.Fake.xml  org.kde.KScreen.Backend.xml  org.kde.KScreen.FakeBackend.xml  org.kde.KScreen.xml
poqm/ar/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/ast/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/bg/: libkscreen6_qt.po
poqm/ca/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/ca@valencia/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/cs/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/de/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/en_GB/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/eo/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/es/: libkscreen6_qt.po
poqm/eu/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/fi/: libkscreen6_qt.po
poqm/fr/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/ga/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/gl/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/he/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/hi/: libkscreen6_qt.po
poqm/hu/: libkscreen6_qt.po
poqm/ia/: libkscreen5_qt.po  libkscreen6_qt.po
poqm/id/: libkscreen6_qt.po
poqm/is/: libkscreen5_qt.po  (+1 more)
qrandr/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  abstractbackend.cpp  abstractbackend.h  backendloader.cpp  backendloader.h  backendmanager.cpp  backendmanager_p.h  config-libkscreen.h.cmake  config.cpp  config.h  configmonitor.cpp  configmonitor.h  configoperation.cpp  configoperation.h  configoperation_p.h  configserializer.cpp  configserializer_p.h  debug_p.cpp  debug_p.h  edid.cpp  edid.h  getconfigoperation.cpp  getconfigoperation.h  inprocessconfigoperation.cpp  inprocessconfigoperation.h  kscreen.cpp  kscreen.h  kscreen.pc.in  kscreen2.pc.in  kscreen_export.h  log.cpp  log.h  mode.cpp  mode.h  output.cpp  output.h  screen.cpp  screen.h  setconfigoperation.cpp  (+4 more)
src/backendlauncher/: CMakeLists.txt  backenddbuswrapper.cpp  backenddbuswrapper.h  backendloader.cpp  backendloader.h  main.cpp  org.kde.kscreen.service.cmake  plasma-kscreen.service.cmake
src/backends/: abstractbackend.h
src/backends/fake/: CMakeLists.txt  fake.cpp  fake.h  parser.cpp
src/backends/xrandr/: xrandr.cpp
src/backends/xrandr/qrandr/: crtc.cpp  mode.h
src/doctor/: CMakeLists.txt  doctor.cpp  doctor.h  dpmsclient.cpp  dpmsclient.h  kscreen-doctor.zsh  main.cpp
src/lib/: crtc.cpp  crtc.h  mode.cpp  mode.h  output.cpp  output.h  screen.cpp  screen.h  xrandr.cpp  xrandr.h
src/libdpms/: CMakeLists.txt  abstractdpmshelper.cpp  abstractdpmshelper_p.h  dpms.cpp  dpms.h  waylanddpmshelper.cpp  waylanddpmshelper_p.h  xcbdpmshelper.cpp  xcbdpmshelper_p.h
src/qrandr/: CMakeLists.txt  crtc.h  edid.cpp  mode.cpp  output.h  outputmonitor.cpp  outputmonitor.h  screen.cpp  screen.h
src/qrandr/testapp/: testapp.cpp
testapp/: CMakeLists.txt  testapp.cpp
tests/: CMakeLists.txt  config.cpp  printconfig.cpp  testplugandplay.cpp  testpnp.cpp  testpnp.h  testscreenconfig.cpp  testxrandr.cpp  waylandconfigreader.cpp  waylandtestserver.cpp  waylandtestserver.h  waylandtestservermain.cpp
tests/configs/: multipleclone.json  multipleoutput.json  singleOutputWithoutPreferred.json  singleoutput.json  singleoutputBroken.json
tests/drm/: CMakeLists.txt  drmbackend.cpp  drmbackend.h  drmoutput.cpp  drmoutput.h  logind.cpp  logind.h  main.cpp  udev.cpp  udev.h
tests/kwayland/: CMakeLists.txt  main.cpp  waylandconfigreader.cpp  waylandconfigreader.h  waylandtestserver.cpp  waylandtestserver.h
tests/touchscreen/: CMakeLists.txt  main.cpp  tstool.cpp  tstool.h  xtouchscreen.cpp  xtouchscreen.h
(+39 files in other folders)
